--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,7 +1,9 @@
 OWNER_NAME="FedoRA"
-PREFIX="~"
+PREFIX="."
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
+AUTO_REACT_STATUS="non"
+CUSTOMISE__STATUS_REACTION="✅️"
 AUTO_DOWNLOAD_STATUS="oui"
 BOT_NAME= "GOD-NIKA"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
