--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -5,10 +5,10 @@ AUTO_READ_STATUS="non"
 AUTO_REACT_STATUS="non"
 CUSTOMISE__STATUS_REACTION="✅️"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "GOD-NIKA"
+BOT_NAME= "RABBI-BOT"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "22891733300"
-OWNER_NAME= "᚛M๏𝓷keℽ D Lบffy᚜"
+NUMERO_OWNER= "255786269776"
+OWNER_NAME= "᚛Rabbi᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
