--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kypher xmd",
+  "name": "Rabbi xmd",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
@@ -16,9 +16,9 @@
     "Bmw-md",
     "whatsapp",
     "whatsapp-bot",
-    "bmw-md-boy"
+    "rabbi-md-boy"
   ],
-  "author": "kypher",
+  "author": "rabbi",
 "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
